--- a/readme
+++ b/readme
@@ -1,9 +1,3 @@
-Minimal changes to the code in StoreData.py
-This was to avoid repition in inputting --board-id and --serial-port in console each time. 
+Comments in StoreData.py about Brainflow Version's function probs. 
 
-The Left Directory contains csv's for when I raised my left arm and recorded for 5 seconds.
-
-The Right Directory ...
-
-The Other Directory is me doing nothing in particular for 5 seconds. 
-
+New Data Points: 5 per Folder.
