--- a/readme
+++ b/readme
@@ -22,3 +22,10 @@ Update:
   @Eric 
     - updated the other NN modules (utilizing the Convolutional method)
     - added the spider robot contorl script (QuadBotTestV3.ino)
+
+  @zoot-io
+    - updated StoreData.py
+      - no more side jobs (data trimming or filtering)
+      - increased data collection time to 10 seconds
+    - Check FullData for full data points
+
