--- a/readme
+++ b/readme
@@ -1,4 +1,6 @@
+# Foobar
 
+Foobar is a Python library for dealing with word pluralization.
 # OpenBCI ML Implementation Capstone Project
 
 ## Comments for Backpropagation.py module:
