Minor Markdown Changes

--- a/notebooks/visualization.ipynb
+++ b/notebooks/visualization.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Visualizing Data from Cyton Board\n",
+    "\n",
+    "The sample rate of the cyton board is 250 Hz. When samples are taken for 1 second, the resulting numpy array has about 130 rows on average. 'On Average' because the number of rows for each run are not always consistent.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Importing all the libraries we need for this"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "source": [
@@ -33,6 +46,15 @@
     "import seaborn as sns"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Loading saved data\n",
+    "\n",
+    "Loading a saved numpy file from earlier and casting it as a Dataframe for better visibility during manipulation and visualization. "
+   ],
    "metadata": {}
   },
   {
@@ -320,6 +342,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Heat map on a random 2D numpy"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "source": [
@@ -371,6 +400,13 @@
       "needs_background": "light"
      }
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Heat map on BCI data"
    ],
    "metadata": {}
   },
@@ -1153,7 +1189,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Scaling using SkLearn MinMaxScaler() ..."
+    "## Scaling using SkLearn MinMaxScaler() ...\n",
+    "\n",
+    "The data for each channel is scaled locally between 0 and 1. "
    ],
    "metadata": {}
   },
