Eric: Please run XGBoost

--- a/notebooks/visualization.ipynb
+++ b/notebooks/visualization.ipynb
@@ -1396,7 +1396,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.7 64-bit ('my_first_env': conda)"
+   "display_name": "Python 3.9.7 64-bit ('ml_env': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1411,7 +1411,7 @@
    "version": "3.9.7"
   },
   "interpreter": {
-   "hash": "9f0da74df8db61e7787991796873113529409377050043f4c1a1db6bf47bc263"
+   "hash": "98070679efb9d2a77062be855c6f9c224ffe22479fd6885a31c9910a2db5889b"
   }
  },
  "nbformat": 4,
